# AED-Projects

./: 2047.ppt  CMakeLists.txt  README.md  f.txt  main.cpp
1st_project/: README.md
1st_project/Tests/: Company.h  Service.cpp  Ticket.cpp  Transports.h
1st_project/code/: .gitignore  AirportManagement_AED_Project  CMakeLists.txt  Makefile
1st_project/code/data/: airports.csv  passengers.csv  planes.csv
1st_project/code/include/: BST.h  Date.h  Passenger.h  Plane.h
1st_project/code/src/: Airport.cpp  Company.cpp  Date.cpp  Flight.cpp  Passenger.cpp  Plane.cpp  Service.cpp  Ticket.cpp  Transports.cpp  main.cpp
2nd_project/: .gitignore  README.md
2nd_project/code/: CMakeLists.txt  aed2122_trabalho2
2nd_project/code/include/: minHeap.h
2nd_project/code/src/: graph.cpp  main.cpp
Tests/: Airport.cpp  Airport.h  Company.cpp  Company.h  Date.cpp  Date.h  Flight.cpp  Flight.h  PASSENGERS.txt  PLANES.txt  Passenger.cpp  Passenger.h  Plane.cpp  Plane.h  Schedule.cpp  Schedule.h  Service.cpp  Service.h  Ticket.cpp  Ticket.h  Transports.cpp  Transports.h  tests.cpp
